--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
